--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div id="main">
         <header class="hero">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Quem sou</a></li>
-                    <li><a href="#">Contato</a></li>
+            <nav class="content-hero-nav">
+                <ul class="content-hero-ul">
+                    <li class="content-hero-li"><a href="index.html">Início</a></li>
+                    <li class="content-hero-li"><a href="#">Quem sou</a></li>
+                    <li class="content-hero-li"><a href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="hero-content">
@@ -23,17 +23,17 @@
         </header>
         <main>
             <section class="content-section">
-                <div class="card">
+                <div class="card card-1">
                     <img src="image/card_01.png" alt="">
                     <p>Seletores</p>
                 </div>
                 
-                <div class="card">
+                <div class="card  card-2">
                     <img src="image/card_02.jpg" alt="">
                     <p>Seletores</p>
                 </div>
                 
-                <div class="card">
+                <div class="card  card-3">
                     <img src="image/card_03.jpg" alt="">
                     <p>Seletores</p>
                 </div>
